[package]
name = "dwarf"
version = "0.0.3"
authors = ["Philip Craig <philipjcraig@gmail.com>"]
description = "Read and write DWARF debugging information"
repository = "https://github.com/philipc/rust-dwarf"
documentation = "https://philipc.github.io/rust-dwarf/dwarf/index.html"
keywords = ["DWARF", "ELF"]
license = "MIT/Apache-2.0"

[dependencies]
byteorder = "0.5.3"
elf = "0.0.9"
leb128 = "0.2.1"

[features]
clippy = []
